unpackaged/main/default/objects/Case/fields/Preferred_Way_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Way_of_Contact__c</fullName>
    <label>Preferred Way of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>