unpackaged/main/default/objects/Case/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Not booked</fullName>
                <label>Not Booked</label>
            </value>
            <value>
                <fullName>Credit Control</fullName>
            </value>
            <value>
                <fullName>Estimate Required</fullName>
            </value>
            <value>
                <fullName>Estimate Accepted and Attendance Required</fullName>
            </value>
            <value>
                <fullName>Awaiting Manager Response</fullName>
            </value>
            <value>
                <fullName>Awaiting Client Response</fullName>
            </value>
            <value>
                <fullName>Online Review</fullName>
            </value>
            <value>
                <fullName>Awaiting Aspect Response</fullName>
            </value>
            <value>
                <fullName>Problem Solved</fullName>
            </value>
            <value>
                <fullName>Escalated to Tech manager</fullName>
            </value>
            <value>
                <fullName>Positive Feed back</fullName>
            </value>
            <value>
                <fullName>Reactive Work Required</fullName>
                <isActive>false</isActive>
                <label>Reactive Work Required</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>