unpackaged/main/default/objects/Case/fields/QC_Siclops_Call_Ref__c.field-meta.xml
<CustomField>
    <fullName>QC_Siclops_Call_Ref__c</fullName>
    <label>QC Siclops Call Ref</label>
    <length>100</length>
    <type>Text</type>
</CustomField>