unpackaged/main/default/objects/Case/fields/Reason_For_Case__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Case__c</fullName>
    <label>Reason For Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10% discount not applied</fullName>
            </value>
            <value>
                <fullName>breakdown of costs labour and materials</fullName>
            </value>
            <value>
                <fullName>charged for a call back</fullName>
            </value>
            <value>
                <fullName>charges not explained by operative on site</fullName>
            </value>
            <value>
                <fullName>duplicate payment</fullName>
            </value>
            <value>
                <fullName>engineer workmanship</fullName>
            </value>
            <value>
                <fullName>quote not received</fullName>
            </value>
            <value>
                <fullName>request for documents (invoice/report/notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>