unpackaged/main/default/objects/Case/fields/Reason_for_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Refund__c</fullName>
    <description>This is the Refund has been applied to a linked Work Order</description>
    <label>Reason for Refund</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charged Incorrectly</fullName>
            </value>
            <value>
                <fullName>Faulty Workmanship</fullName>
            </value>
            <value>
                <fullName>Gesture of Good Will</fullName>
            </value>
            <value>
                <fullName>TBC</fullName>
                <isActive>false</isActive>
                <label>TBC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>