unpackaged/main/default/objects/Case/fields/Reco_s_for_additional_work_in_property__c.field-meta.xml
<CustomField>
    <fullName>Reco_s_for_additional_work_in_property__c</fullName>
    <label>Reco&#39;s for additional work in property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>