unpackaged/main/default/objects/Case/fields/Refund_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Refund_Suggestion__c</fullName>
    <description>This field holds the suggested Refund solution</description>
    <label>Refund Suggestion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>