unpackaged/main/default/objects/Case/fields/Refund_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Refund_to_Customer__c</fullName>
    <description>This will be the amount that will be refunded to the Customer and will be deducted from the Work Order Total Automatically</description>
    <label>Refund to Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>