unpackaged/main/default/objects/Case/fields/Region_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Region_Area_Code__c</fullName>
    <description>This represents the Region Area code that the Case falls under</description>
    <formula>Site__r.Region_Area_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region Area Code</label>
    <type>Text</type>
</CustomField>