unpackaged/main/default/objects/Case/fields/Reschedule_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Reason__c</fullName>
    <description>Reason given by the Customer for Rescheduling</description>
    <label>Reschedule Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Longer Required</fullName>
            </value>
            <value>
                <fullName>Found a better alternative</fullName>
            </value>
            <value>
                <fullName>Aspect under performance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>