unpackaged/main/default/objects/Case/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <label>Resolution Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>