unpackaged/main/default/objects/Case/fields/Service_Resource_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_First_Name__c</fullName>
    <label>Service Resource First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>