unpackaged/main/default/objects/Case/fields/Service_Resource_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Last_Name__c</fullName>
    <label>Service Resource Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>