unpackaged/main/default/objects/Case/fields/Service_Resource_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Phone__c</fullName>
    <label>Service Resource Phone</label>
    <type>Phone</type>
</CustomField>