unpackaged/main/default/objects/Case/fields/Service_Resournce_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resournce_Name__c</fullName>
    <formula>Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Resournce Name</label>
    <type>Text</type>
</CustomField>