unpackaged/main/default/objects/Case/fields/Siclops_Reference__c.field-meta.xml
<CustomField>
    <fullName>Siclops_Reference__c</fullName>
    <description>Contains the &#39;Internal Reference&#39; field from Siclops from Data Import</description>
    <label>Siclops_Reference</label>
    <length>22</length>
    <type>Text</type>
</CustomField>