unpackaged/main/default/objects/Case/fields/test_1__c.field-meta.xml
<CustomField>
    <fullName>test_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test 1</label>
    <type>Checkbox</type>
</CustomField>