unpackaged/main/default/objects/Case/fields/test_3__c.field-meta.xml
<CustomField>
    <fullName>test_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test 3</label>
    <type>Checkbox</type>
</CustomField>