unpackaged/main/default/objects/Case/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <defaultValue>&#39;Parent&#39;</defaultValue>
    <description>This field shows the Broad Trade Skill that this Case applies to</description>
    <inlineHelpText>Multiple Trades must be assigned to a Case for creating Work Orders</inlineHelpText>
    <label>Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Trade</valueSetName>
    </valueSet>
</CustomField>