unpackaged/main/default/objects/Case/fields/Trade_Group__c.field-meta.xml
<CustomField>
    <fullName>Trade_Group__c</fullName>
    <label>Trade Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>﻿Electrical</fullName>
            </value>
            <value>
                <fullName>Multi</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>﻿Gas</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>﻿Leak Detection</fullName>
            </value>
            <value>
                <fullName>﻿Flood</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Multi &amp; Roofing</fullName>
                <isActive>false</isActive>
                <label>Multi &amp; Roofing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>