unpackaged/main/default/objects/Case/fields/Trade_Group_Main__c.field-meta.xml
<CustomField>
    <fullName>Trade_Group_Main__c</fullName>
    <formula>TEXT (Job__r.Job_Type__r.Group_Lookup__r.Trade__r.Trade_Group__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Group (Auto)</label>
    <type>Text</type>
</CustomField>