unpackaged/main/default/objects/Case/fields/Was_the_work_Carried_out_by_Aspect__c.field-meta.xml
<CustomField>
    <fullName>Was_the_work_Carried_out_by_Aspect__c</fullName>
    <label>Was the work Carried out by Aspect?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>