unpackaged/main/default/objects/Case/recordTypes/Case_via_C_Sat_SMS.recordType-meta.xml
<RecordType>
    <fullName>Case_via_C_Sat_SMS</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>Case created from Marketing cloud</description>
    <label>Case via C-Sat SMS</label>
</RecordType>