unpackaged/main/default/objects/Case/recordTypes/Case_via_Email.recordType-meta.xml
<RecordType>
    <fullName>Case_via_Email</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>Case via Email</label>
</RecordType>