unpackaged/main/default/objects/Case/recordTypes/Case_via_Email_and_Work_Order_Link.recordType-meta.xml
<RecordType>
    <fullName>Case_via_Email_and_Work_Order_Link</fullName>
    <active>true</active>
    <businessProcess>Case via Email and Work Order Link</businessProcess>
    <label>Case via Email and Work Order Link</label>
</RecordType>