unpackaged/main/default/objects/Case/recordTypes/Case_via_TI.recordType-meta.xml
<RecordType>
    <fullName>Case_via_TI</fullName>
    <active>true</active>
    <businessProcess>Case via TI</businessProcess>
    <label>Case via TI</label>
</RecordType>