unpackaged/main/default/objects/Case/recordTypes/Case_via_Website_form_not_pre_populated.recordType-meta.xml
<RecordType>
    <fullName>Case_via_Website_form_not_pre_populated</fullName>
    <active>true</active>
    <businessProcess>Case via Website %28form not pre-populated%29</businessProcess>
    <label>Case via Website (form not pre-populated)</label>
</RecordType>