unpackaged/main/default/objects/Case/recordTypes/Community.recordType-meta.xml
<RecordType>
    <fullName>Community</fullName>
    <active>false</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>This is a record type for community users</description>
    <label>Community</label>
</RecordType>