unpackaged/main/default/objects/Case/recordTypes/Complaint.recordType-meta.xml
<RecordType>
    <fullName>Complaint</fullName>
    <active>false</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>Complaint</label>
</RecordType>