unpackaged/main/default/objects/Case/recordTypes/General_Enquiries.recordType-meta.xml
<RecordType>
    <fullName>General_Enquiries</fullName>
    <active>false</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>General Enquiries</label>
</RecordType>