unpackaged/main/default/objects/Case/recordTypes/Operative_Contact.recordType-meta.xml
<RecordType>
    <fullName>Operative_Contact</fullName>
    <active>true</active>
    <businessProcess>Default Support Process</businessProcess>
    <label>Operative Contact</label>
</RecordType>