unpackaged/main/default/objects/Case/recordTypes/Operative_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Operative_Support_Request</fullName>
    <active>true</active>
    <businessProcess>Operative Support Request</businessProcess>
    <label>Operative Support Request</label>
</RecordType>