unpackaged/main/default/objects/Case/recordTypes/Raised_by_Office.recordType-meta.xml
<RecordType>
    <fullName>Raised_by_Office</fullName>
    <active>true</active>
    <businessProcess>Raised by Office</businessProcess>
    <label>Raised by Office</label>
</RecordType>