unpackaged/main/default/objects/Case/recordTypes/Reschedule.recordType-meta.xml
<RecordType>
    <fullName>Reschedule</fullName>
    <active>false</active>
    <businessProcess>Default Support Process</businessProcess>
    <description>Used to take information for Rescheduling from the Customer Community Site</description>
    <label>Reschedule</label>
</RecordType>