unpackaged/main/default/objects/Case/validationRules/Community_User_Status_New.validationRule-meta.xml
<ValidationRule>
    <fullName>Community_User_Status_New</fullName>
    <active>true</active>
    <description>Community Users cannot edit the Status to anything other than new when submitting a Case</description>
    <errorConditionFormula>AND(
$Profile.Name  =  &#39;Aspect Customer Community User&#39;,
NOT(ISPICKVAL( Status , &#39;New&#39;)))</errorConditionFormula>
    <errorMessage>Please enter the Status as &#39;New&#39;</errorMessage>
</ValidationRule>