unpackaged/main/default/objects/Case/validationRules/Complaints_Customer_Care_Team.validationRule-meta.xml
<ValidationRule>
    <fullName>Complaints_Customer_Care_Team</fullName>
    <active>false</active>
    <errorConditionFormula>And(( NOT( Owner:Queue.QueueName    &lt;&gt; &quot;Credit Control Team&quot;)),(OR( ISPICKVAL( Status , &quot;Complete and Invoiced&quot;),ISPICKVAL( Status , &quot;Declined and Invoiced&quot;))))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>This Complaint cannot be closed unless you are a member of the Customer Care Team</errorMessage>
</ValidationRule>