unpackaged/main/default/objects/Case/listViews/All_Cases.listView-meta.xml
<ListView>
    <fullName>All_Cases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Site__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Job_Type_Trade__c</columns>
    <columns>Trade_Group_Main__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Case_Type__c</columns>
    <columns>Concerns_from_Web__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Progress__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Postcode__c</columns>
    <columns>Phone__c</columns>
    <columns>CC_CHECK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>8/5/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Raised_by_Office</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Operative_Support_Request</value>
    </filters>
    <label>All Cases</label>
</ListView>