unpackaged/main/default/objects/Case/listViews/All_Cases_closed_Today.listView-meta.xml
<ListView>
    <fullName>All_Cases_closed_Today</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Site__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Trade_Group__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Progress__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Postcode__c</columns>
    <columns>Phone__c</columns>
    <columns>CC_CHECK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Raised_by_Office</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>All Cases closed Today</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>