unpackaged/main/default/objects/Case/listViews/All_Cases_Pre_September.listView-meta.xml
<ListView>
    <fullName>All_Cases_Pre_September</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Site__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Trade_Group__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Case_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Progress__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Postcode__c</columns>
    <columns>Phone__c</columns>
    <columns>CC_CHECK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>lessThan</operation>
        <value>9/1/2021 12:00 AM</value>
    </filters>
    <label>All Cases Pre-September</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>