unpackaged/main/default/objects/Case/listViews/All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Cases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Site__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Trade_Group__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Progress__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Postcode__c</columns>
    <columns>Phone__c</columns>
    <columns>CC_CHECK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>8/5/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Case.Raised_by_Office</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Investigating,Awaiting Customer Response,Response Required From Aspect,Complaint,Credit Control,Estimate Needed,Fixed Price Work Needed,Reactive Work Needed,Review,Waiting on Client,Waiting on Engineer,Waiting on Manager Response,Open</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Arrival time update</value>
    </filters>
    <label>Open Cases Arrival time update</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>