unpackaged/main/default/objects/Case/listViews/All_Open_Contact_Centre_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Contact_Centre_Cases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Site__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Job_Type_Trade__c</columns>
    <columns>Trade_Group__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>Case_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Progress__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Postcode__c</columns>
    <columns>Phone__c</columns>
    <columns>CC_CHECK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Investigating,Awaiting Customer Response,Response Required From Aspect,Complaint,Credit Control,Estimate Needed,Fixed Price Work Needed,Reactive Work Needed,Review,Waiting on Client,Waiting on Engineer,Waiting on Manager Response,Open</value>
    </filters>
    <filters>
        <field>Trade_Group__c</field>
        <operation>equals</operation>
        <value>Contact Centre</value>
    </filters>
    <label>All Open Contact Centre Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>