unpackaged/main/default/objects/Case/listViews/All_Open_Trade_Desk_Cases.listView-meta.xml
<ListView>
    <fullName>All_Open_Trade_Desk_Cases</fullName>
    <columns>Trade_Group__c</columns>
    <columns>Site__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Case_Type__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Postcode__c</columns>
    <columns>Phone__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Progress__c</columns>
    <columns>CASES.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>8/5/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Investigating,Awaiting Customer Response,Response Required From Aspect,Complaint,Credit Control,Estimate Needed,Fixed Price Work Needed,Reactive Work Needed,Review,Waiting on Client,Waiting on Engineer,Waiting on Manager Response,Open</value>
    </filters>
    <filters>
        <field>Assigned_to__c</field>
        <operation>equals</operation>
        <value>Rio Wigneswararan,Lowenstrein Michael,Hayley Marchant,Hollie Whiteman,Lee Merryweather,Mark Pearce,Jamie Jones</value>
    </filters>
    <filters>
        <field>Trade_Group__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Open Trade Desk Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>