unpackaged/main/default/objects/Case/listViews/All_Prospect_Clients.listView-meta.xml
<ListView>
    <fullName>All_Prospect_Clients</fullName>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>Onboarding__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Onboarding__c</field>
        <operation>contains</operation>
        <value>New,Existing</value>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>notEqual</operation>
        <value>Phase 2 Test Cash Account</value>
    </filters>
    <label>All Prospect Clients</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>