unpackaged/main/default/objects/Case/listViews/All_Roofing.listView-meta.xml
<ListView>
    <fullName>All_Roofing</fullName>
    <columns>Trade_Group__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Job_Number__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.STATUS</columns>
    <columns>Postcode__c</columns>
    <columns>Job_Type_Trade__c</columns>
    <columns>Assigned_to__c</columns>
    <columns>QC_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>greaterThan</operation>
        <value>8/5/2021 12:00 AM</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Investigating,Awaiting Customer Response,Response Required From Aspect,Complaint,Credit Control,Estimate Needed,Fixed Price Work Needed,Reactive Work Needed,Review,Waiting on Client,Waiting on Engineer,Waiting on Manager Response,Open</value>
    </filters>
    <filters>
        <field>Trade_Group__c</field>
        <operation>equals</operation>
        <value>Roofing</value>
    </filters>
    <label>All Roofing</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>